# StayPresent

./: DOCUMENTATION.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
staypresent/: __init__.py  pinger.py  runner.py  server.py  web.py
