[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staypresent"
version = "1.0.1"
description = "Run your Python bot alongside a lightweight Flask web server."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ashish Sharma as NTDevLops" }
]
requires-python = ">=3.8"

dependencies = [
    "Flask>=3.0.0"
]

keywords = [
    "flask",
    "telegram",
    "discord",
    "bot",
    "webserver",
    "keepalive"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/NTDevLops/staypresent"
Repository = "https://github.com/NTDevLops/staypresent"
Issues = "https://github.com/NTDevLops/staypresent/issues"