[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staypresent"
version = "1.4.2"
description = "Keep your Python bots alive with a zero-config, production-ready background web server."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ashish Sharma as NTDevLops" }
]
requires-python = ">=3.8"

# Keywords and Classifiers MUST come before any [project.something] subtables
keywords = [
    # Core concepts
    "flask",
    "webserver",
    "keepalive",
    "bot",
    
    # Target integrations
    "telegram-bot",
    "discord-bot",
    "automation",
    "background-worker",
    
    # Target deployment platforms
    "render",
    "heroku",
    "railway",
    "koyeb",
    
    # Technical features
    "waitress",
    "wsgi",
    "auto-restart",
    "crash-recovery",
    "hosting",
    "deployment"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "Flask>=3.0.0"
]

[project.optional-dependencies]
prod = [
    "waitress>=2.1.2"
]

[project.urls]
Homepage = "https://github.com/NTDevLops/staypresent"
Repository = "https://github.com/NTDevLops/staypresent"
Issues = "https://github.com/NTDevLops/staypresent/issues"